--- a/frontend/src/styles/description.css
+++ b/frontend/src/styles/description.css
@@ -4,6 +4,7 @@
   width: 30%;
 }
 #profImg {
+  margin-left: 20%;
   border-radius: 50%;
   border: 1px solid black;
   width: 300px;
@@ -19,38 +20,38 @@
   font-size: 1.1rem;
 }
 #peepo1 {
-  width: 5%;
-  top: 65%;
+  width: 4%;
+  top: 75%;
   right: 75%;
   position: absolute;
 }
 #peepo2 {
-  width: 6%;
-  top: 65%;
-  right: 25%;
+  width: 5%;
+  top: 72%;
+  right: 35%;
   position: absolute;
 }
 #peepo3 {
-  width: 5%;
-  top: 65%;
-  right: 68%;
+  width: 4%;
+  top: 75%;
+  right: 65%;
   position: absolute;
 }
 #peepo4 {
-  width: 5%;
-  top: 65%;
-  right: 17%;
+  width: 4%;
+  top: 75%;
+  right: 25%;
   position: absolute;
 }
 #peepo5 {
-  width: 5%;
-  top: 65%;
-  right: 8%;
+  width: 4%;
+  top: 75%;
+  right: 15%;
   position: absolute;
 }
 #peepo6 {
-  width: 5%;
-  top: 76.2%;
+  width: 4%;
+  top: 86.4%;
   right: 55%;
   position: absolute;
 }
