--- a/backend/public/css/description.css
+++ b/backend/public/css/description.css
@@ -11,11 +11,16 @@
   height: 300px;
   background-color: white;
 }
-.backEnd {
+/* .backEnd {
   margin-right: 150px;
 }
 .frontEnd {
   margin-left: 60px;
+} */
+.exp {
+  border: 1px solid deeppink;
+  backdrop-filter: blur(10px);
+  border-radius: 20px;
 }
 #root {
   background-image: url("https://static.vecteezy.com/system/resources/previews/003/627/132/non_2x/nature-scene-background-with-rainbow-in-the-sky-free-vector.jpg");
@@ -28,19 +33,19 @@
 #peepo1 {
   width: 4%;
   top: 75%;
-  right: 75%;
+  right: 78%;
   position: absolute;
 }
 #peepo2 {
   width: 5%;
   top: 72%;
-  right: 35%;
+  right: 32%;
   position: absolute;
 }
 #peepo3 {
   width: 4%;
   top: 75%;
-  right: 65%;
+  right: 69%;
   position: absolute;
 }
 #peepo4 {
